# DevKit

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.ko.md  README.md  docker-compose.common.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
config/: aliases.sh  bash_init.sh  bashrc_common.sh  bashrc_ros.sh  devkit_make_completion.bash  init_bash.sh  init_ros_env.sh  ros_env_init.sh  terminator_config  util_aliases.sh  util_paths.sh
dependencies/: FetchDependencies.cmake  apt.txt  apt_ros.txt  dependencies.repos  requirements.txt
dependencies/overlay/: README.md
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  prod_entrypoint.sh
docs/: DEBUGGING.md  DEVELOPMENT.md  GEMINI.md  SLURM.md
scripts/: apptainer_bake.sh  apptainer_run.sh  check_deps.sh  check_env.sh  check_hardware.sh  check_preflight.sh  check_wsl.sh  env_detector.sh  get_python_exe.sh  gpu_setup.sh  hardware_check.sh  internal_apt_helper.sh  setup_gpu.sh  setup_ros_gpg.sh  setup_sync_deps.sh  show_welcome.sh  slurm_run.sh  sync_deps.sh  update_ros_gpg.sh  util_apptainer_binds.sh  util_apt_helper.sh  util_cuda_apt.sh  util_doc_render.sh  util_get_python.sh  util_gpu_detect.sh  util_logging.sh  util_make_help.sh  util_make_stats.sh  util_make_top.sh  util_release_metadata.sh  util_setup_links.sh  util_sif_runtime.sh  utils_gpu_detect.sh  utils_logging.sh  verify_repo.sh  welcome.sh  wsl_auditor.sh
src/: pyproject.toml
