[project]
name = "DevKit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
cpu = [
    "torch==2.11.0; python_version >= '3.10'",
    "torchvision; python_version >= '3.10'",
]
gpu = [
    "torch==2.11.0; python_version >= '3.10'",
    "torchvision; python_version >= '3.10'",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
conflicts = [
    [ { extra = "cpu" }, { extra = "gpu" } ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]
